# serde_rw

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yaml
src/: error.rs  formats.rs  from_file.rs  functions.rs  lib.rs  to_file.rs
src/formats/: json.rs  toml.rs  xml.rs  yaml.rs
tests/: person.json  person.toml  person.xml  person.yml  test.rs
