[package]
name = "serde_from_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
from_file = "0.1.3"
quick-xml = { version = "0.29.0", features = ["serialize"], optional = true }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.97", optional = true }
serde_yaml = { version = "0.9.21", optional = true }

[features]
json = ["dep:serde_json"]
xml = ["dep:quick-xml"]
yaml = ["dep:serde_yaml"]
