[package]
name = "serde_rw"
authors = ["Richard Neumann <mail@richard-neumann.de>"]
description = "Extend serde serializers and deserializers with the ability to read / write different file formats from / to files"
license-file = "LICENSE"
homepage = "https://github.com/conqp/serde_rw/"
repository = "https://github.com/conqp/serde_rw/"
readme = "README.md"
documentation = "https://docs.rs/serde_rw"
keywords = ["serde", "file", "read", "write"]
categories = ["parsing"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
from_file = "0.1.3"
quick-xml = { version = "0.29.0", features = ["serialize"], optional = true }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.97", optional = true }
serde_yaml = { version = "0.9.21", optional = true }

[features]
json = ["dep:serde_json"]
xml = ["dep:quick-xml"]
yaml = ["dep:serde_yaml"]
